2005-09-25  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgetsenums.[ch]: removed GimpZoomWidgetType.

	* libgimpwidgets/gimpzoommodel.[ch]: removed gimp_zoom_widget_new()
	in favor of gimp_zoom_button_new().

	* libgimp/gimpzoompreview.c: changed accordingly.

	* libgimpwidgets/gimpwidgets.def: updated.

	* plug-ins/MapObject/mapobject_main.[ch]
	* plug-ins/MapObject/mapobject_preview.c
	* plug-ins/MapObject/mapobject_ui.c: use a GimpZoomModel and let
	it create the zoom buttons.

	* plug-ins/MapObject/mapobject_apply.c
	* plug-ins/MapObject/mapobject_image.c
	* plug-ins/MapObject/mapobject_shade.c: include "gimp/gimpui.h".

2005-09-25  Michael Natterer  <mitch@gimp.org>

	* plug-ins/help/Makefile.am (gimp_help_lookup_LDADD): link
	against libgimpbase now that we use gimp_data_directory().

2005-09-25  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scripts/distress-selection.scm: renamed to
	"Distort..." and moved to Select/Modify.

2005-09-24  Hans Breuer  <hans@breuer.org>

	* **makefile.msc : updated
	
	* app/dialogs/user-install-dialog.c : only add the migrate page if
	there is something to migrate from. Avoids on version being NULL.
	
	* app/dialogs/file-save-dialog.c : the g_print() output was crashing
	on the assumption that ->menu_label != NULL. It is for colorhtml.py.
	
	* app/widgets/gimpselectiondata.c : use HAVE_UNISTD_H and move 
	* process.h definition by G_OS_WIN32 below it being defined
	* app/widgets/gimpwidgets-utils.c(gimp_window_get_native) : cast
	return value to (GdkNativeWindow) it is not necessary an int.
	
	* libgimpwidgets/gimpwidgets.def : added gimp_zoom_type_get_type
	
	* plug-ins/help/gimp-help-lookup.c : dynamic lookup of help_root
	instead of hard-coding DATADIR/GIMP_HELP_PREFIX
	
	* plug-ins/xjt/xjt.c : there is no pid_t with msvc, typedef one.
	
2005-09-25  Michael Natterer  <mitch@gimp.org>

	* app/actions/plug-in-actions.c
	* menus/image-menu.xml.in: get rid of Filters/Effects because it