@@ -137,7 +137,7 @@ gimp_foreground_select_tool_register (GimpToolRegisterCallback  callback,
                 GIMP_CONTEXT_FOREGROUND_MASK | GIMP_CONTEXT_BACKGROUND_MASK,
                 "gimp-foreground-select-tool",
                 _("Foreground Select"),
-                _("Extract a single foreground object"),
+                _("Extract foreground objects"),
                 N_("F_oreground Select"), NULL,
                 NULL, GIMP_HELP_TOOL_FOREGROUND_SELECT,
                 GIMP_STOCK_TOOL_FOREGROUND_SELECT,
